--- a/WebContent/templates/main-template.xhtml
+++ b/WebContent/templates/main-template.xhtml
@@ -6,7 +6,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title><ui:insert name="title">Template Principal</ui:insert></title>
+	<title><ui:insert name="title">Loja CD</ui:insert></title>
 </h:head>
 
 <h:body>
